Detail Client aangepast en aangevuld

--- a/Hoofdstukken/ontwerp/detail.tex
+++ b/Hoofdstukken/ontwerp/detail.tex
@@ -1,5 +1,7 @@
 \section{Detail ontwerp} \label{sec:detail}
 
+\todo{Dit moet ingeleid worden. Iets met de volgorde waarin alles staat enzo}
+
 \input{./Hoofdstukken/ontwerp/detail/architectuur.tex}
 \input{./Hoofdstukken/ontwerp/detail/externelibraries.tex}
 \input{./Hoofdstukken/ontwerp/detail/module.tex}
