--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -1,4 +1,7 @@
+% !TEX spellcheck = nl_NL
 \chapter{Conclusie} \label{hoofdstuk:conclusie}
-\section{Sectie}
-\subsection{Subsectie}
-Tekst in subsectie.
+Dit project had als doel om een nieuwe omgeving te ontwikkelen die beginnende Haskell-programmeurs, zoals studenten van het vak Functioneel Programmeren, in staat stelt om grafische weergaven te maken en te manipuleren met eenvoudige, zelfgeschreven Haskell-code. Deze omgeving zou bovendien op alle gangbare platformen moeten draaien terwijl de installatie van de omgeving niet onredelijk ingewikkeld moest zijn.
+
+\emph{Canvas.hs}, de ontwikkelde omgeving die in dit verslag gepresenteerd is, is de vervulling van dit doel.
+
+\todo{Voltooi Conclusie}
