--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -13,7 +13,7 @@ Canvas.hs is een library die de programmeur kan importeren in zijn programma om 
 
 Een gebeurtenis die binnen het systeem plaatsvindt wordt ook wel een \emph{event} genoemd. Denk hierbij bijvoorbeeld aan een toetsaanslag of een muisklik. De user applicatie zal een zogenaamde eventHandler moeten bevatten welke aangeroepen wordt na het plaatsvinden van een event. Deze eventHandler kan op basis van deze gebeurtenis een nieuwe grafische boom opleveren, hierbij kan gedacht worden aan een boom met daarin o.a. text en simpele vormen die samen een groter geheel vormen. Dit alles wordt hieronder toegelicht in \autoref{par:globaal_shapes}. De opgeleverde boom zal vervolgens op het canvas getekend worden. 
 
-De eventHandler kan naast het opleveren van een nieuwe grafische boom ook nog een aantal uit te voeren acties opleveren, hierbij kan gedacht worden aan bijvoorbeeld het lezen of schrijven van bestanden. 
+De eventHandler kan naast het opleveren van een nieuwe grafische boom ook nog een aantal uit te voeren acties opleveren; hierbij kan gedacht worden aan bijvoorbeeld het lezen of schrijven van bestanden. 
 
 De eventHandler heeft de mogelijkheid om state bij te houden. Elke keer dat de eventHandler door Canvas.hs wordt aangeroepen krijgt deze de vorige opgeleverde state mee en de eventHandler geeft een nieuwe state in het resultaat. 
 
