Kleine inleiding voor het detail ontwerp geschreven

--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -3,7 +3,7 @@
 
 De applicatiearchitectuur die Canvas.hs gebruikt bestaat uit drie componenten. De applicatie van de gebruiker, de Canvas.hs module en de JavaScript Canvas.hs applicatie—in dit verslag aangeduid als de client. De module en de client vormen samen de Canvas.hs library.
 
-De Canvas.hs module biedt functies aan die de programmeur kan gebruiken om te tekenen en bepaalde acties uit te voeren in de browser. De module draait een server om te communiceren met de browseromgeving. De browseromgeving verbindt door middel van websockets met de server en geeft de output van het programma weer in een canvas HTML-element. In \autoref{fig:architectuur} is een schematische weergave van de architectuur weergegeven.
+De Canvas.hs module biedt functies aan die de programmeur kan gebruiken om te tekenen en bepaalde acties uit te voeren in de browser. De module draait een server om te communiceren met de client. De client verbindt door middel van websockets met de server en geeft de output van het programma weer in een canvas HTML-element. In \autoref{fig:architectuur} is een schematische weergave van de architectuur weergegeven.
 
 \begin{figure}
 \begin{center}
@@ -23,7 +23,7 @@ Het is mogelijk om door middel van XMLHttpRequest of WebSockets een verbinding t
 \paragraph{Protocol}
 In Cavas.hs wordt voor deze communicatie gebruik gemaakt van JSON \cite{JSON2006}. JSON staat voor JavaScript Object Notation en is een notatie waarin objecten als text worden gerepresenteerd zoals dit ook in Javascript wordt gedaan. JSON is een veel gebruikte notatie voor communicatie met Javascript. Het voordeel van JSON is, doordat het zo veel gebruikt wordt, dat er veel bibliotheken beschikbaar zijn om met JSON om te gaan. Zowel voor javascript als voor Haskell was het eenvoudig een goede externe bibliotheek te vinden om data van en naar JSON te lezen en te schrijven. Een ander groot voordeel van JSON is dat het, in tegenstelling tot bijvoorbeeld XML, weinig overhead heeft. Een uitgebreide handleiding van het protocol van gevonden worden in \cite{Protocol2013}.
 
-Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de browseromgeving te ondersteunen. De datastructuur van het protocol lijkt zoveel mogelijk op die van het canvas. Hierdoor kan data die binnenkomt bij de javascript applicatie zonder al te veel veranderingen op het canvas getekend worden.
+Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de client te ondersteunen. De datastructuur van het protocol lijkt zoveel mogelijk op die van het canvas. Hierdoor kan data die binnenkomt bij de javascript applicatie zonder al te veel veranderingen op het canvas getekend worden.
 
 \paragraph{Stateless module}
 De Canvas.hs module houdt de huidige grafische boom niet bij. Deze wordt na ontvangst van de gebruiker applicatie onmiddelijk geëncodeerd naar JSON en opgestuurd naar de Javascriptapplicatie. Dit heeft een aantal voordelen, allereerst maakt dit het gebruik van de module door de programmeur gemakkelijker. Elke keer dat de eventHandler wordt uitgevoerd wordt hiervan verwacht dat deze een volledige grafische boom oplevert. Hierdoor is het voor de programmeur en de module niet nodig om uit te zoeken waar de grafische boom precies veranderd moet worden. Bijkomend voordeel hiervan is dat er slechts één plek is waar de huidige grafische boom wordt bijgehouden: de Javascript applicatie. Hierdoor kunnen er geen synchronisatiefouten tussen de Haskell module en de Javascriptapplicatie ontstaan. 
