--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -44,7 +44,7 @@ In de basis zal Canvas.hs dezelfde functionaliteit ondersteunen als de oude graf
 	\setcounter{startvalue}{\value{enumi}}
 \end{enumerate}
 
-\paragraph{Acties} In de oude grafische omgeving worden een aantal \emph{acties} ondersteund die buiten de grafische output om werken. Acties worden gedefineerd als: vanuit de \emph{module} aangeroepen gebeurtenissen. Deze acties bieden complexe functionaliteit versimpeld aan de gebruiker aan. Hierbij kan gedacht worden aan: het openen van een tekstinvoerpop-up en de mogelijkheid om bestanden te verwerken. Door het gebruik van acties hoeft de gebruiker zelf geen I/O te gebruiken in zijn Haskell programma. Dit verlaagt het instapniveau om aan de gang te gaan met Haskell en een grafische omgeving. Om Canvas.hs breder inzetbaar te maken dient het als extra functionaliteit ook fullscreen weergegeven te kunnen worden. Dit is bijvoorbeeld handig in een presentatie.
+\paragraph{Acties} In de oude grafische omgeving wordt een aantal \emph{acties} ondersteund die buiten de grafische output om werken. Acties worden gedefineerd als: vanuit de \emph{module} aangeroepen gebeurtenissen. Deze acties bieden complexe functionaliteit versimpeld aan de gebruiker aan. Hierbij kan gedacht worden aan: het openen van een tekstinvoerpop-up en de mogelijkheid om bestanden te verwerken. Door het gebruik van acties hoeft de gebruiker zelf geen I/O te gebruiken in zijn Haskell programma. Dit verlaagt het instapniveau om aan de gang te gaan met Haskell en een grafische omgeving. Om Canvas.hs breder inzetbaar te maken dient het als extra functionaliteit ook fullscreen weergegeven te kunnen worden. Dit is bijvoorbeeld handig in een presentatie.
 
 \begin{enumerate}[label={R\arabic*}]
 \setcounter{enumi}{\value{startvalue}}
@@ -87,7 +87,7 @@ Operating systemen incompatibility was een ander probleem met de oude grafische 
 	\begin{enumerate}[label={R\arabic{enumi}.\arabic*}]
 		\item De library dient te werken in de laatste versie van Internet Explorer, Firefox, Chrome en Safari.
 		\item De library dient te werken op Linux, OS X en Windows.
-		\item De library dient te werken op een computer met een hoge pixeldichtheid.
+		\item De library dient te werken op een display met een hoge pixeldichtheid.
 	\end{enumerate}
 	\item \label{req:performance} De library dient gemakkelijk en snel te gebruiken te zijn.
 	\begin{enumerate}[label={R\arabic{enumi}.\arabic*}]
