--- a/references.bib
+++ b/references.bib
@@ -29,3 +29,59 @@
 	year = "2013",
 	howpublished = {\url{http://canvashs.github.io/protocol.html}}
 }
+
+@misc{Warp,
+	author = {Michael Snoyman and Kazu Yamamoto and Matt Brown},
+	title = "warp: A fast, light-weight web server for WAI applications.",
+	month = "january",
+	year = "2014",
+	howpublished = {\url{http://hackage.haskell.org/package/warp}}
+}
+
+@misc{Happstack,
+	author = {{Happstack team and HAppS LLC}},
+	title = "happstack-server: Web related tools and services.",
+	month = "january",
+	year = "2014",
+	howpublished = {\url{http://hackage.haskell.org/package/happstack-server}}
+}
+
+@misc{Hyena,
+	author = {Johan Tibell},
+	title = "hyena: Simple web application server",
+	month = "november",
+	year = "2010",
+	howpublished = {\url{http://hackage.haskell.org/package/hyena}}
+}
+
+@misc{SnapServer,
+	author = {James Sanders and Gregory Collins and Doug Beardsley},
+	title = "snap-server: A fast, iteratee-based, epoll-enabled web server for the Snap Framework",
+	month = "january",
+	year = "2014",
+	howpublished = {\url{http://hackage.haskell.org/package/snap-server}}
+}
+
+@misc{Aeson,
+	author = {Bryan O'Sullivan},
+	title = "aeson: Fast JSON parsing and encoding",
+	month = "october",
+	year = "2013",
+	howpublished = {\url{http://hackage.haskell.org/package/aeson-0.6.2.1}}
+}
+
+@misc{jQuery,
+	author = {John Resig},
+	title = "jQuery a fast, small, and feature-rich JavaScript library",
+	month = "juli",
+	year = "2013",
+	howpublished = {\url{http://jquery.com}}
+}
+
+@misc{KineticJS,
+	author = {Eric Rowell},
+	title = "KineticJS",
+	month = "january",
+	year = "2014",
+	howpublished = {\url{http://jquery.com}}
+}
