--- a/verslag.tex
+++ b/verslag.tex
@@ -33,6 +33,10 @@
   }
 }
 \captionsetup[lstlisting]{ format=listing, labelfont=white, textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize} }
+
+%hyphenation
+\hyphenation{back-logs}
+
 % set parameters for lstlisting and lstinline
 \lstset{
   breaklines=true, % Enables wrapping in lstlisting environment.
