--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -53,7 +53,7 @@ Een belangrijke discussie was dat de gebruiker niet meer data moet geven dan str
 
 De oplossing is een \inlinecode{Default} typeklasse, een Event heeft een record met velden voor het ID en een aantal booleans voor of hij geinteresseerd is in Events, dit record derived \inlinecode{Defaults} en die typeklasse heeft een functie \inlinecode{defaults}. Deze functie geeft een standaard record terug die leeg is, het ID is leeg en de shape is (met dat record) niet geinteresseerd in events, de gebruiker kan dan die defaults bewerken om de shape een ID te geven en geinteresseerd te laten zijn in events. Een voorbeeld hiervan is hierboven al gegeven, het record gegeven door de \inlinecode{defaults} record is bewerkt en het eventId is "mickey" geworden, verder is de vorm nu geinteresseerd in muiskliks.
 
-Naast dat een gebruiker geen overbodige waarden moet opgeven als hij wel ge"interesseerd is in events, hoeft hij ook geen overbodige Events te defini"eren. Er is een tijd sprake geweest dat Events op een Shape zou werken, zo zou de rechthoek een \inlinecode{Maybe Event} hebben. Doordat er besloten is dat Event een node is in de scenegraaf hoeft de gebruiker geen onnodige Nothings aan te geven als een shape niet geinteresseerd is in events, hij voegt gewoon geen Event nodes toe.
+Naast dat een gebruiker geen overbodige waarden moet opgeven als hij wel ge"interesseerd is in events, hoeft hij ook geen overbodige Events te defini"eren. Er is een tijd sprake geweest dat Events op een Shape zou werken, zo zou de rechthoek een \inlinecode{Maybe Event} hebben. Doordat er besloten is dat Event een node is in de grafische boom hoeft de gebruiker geen onnodige Nothings aan te geven als een shape niet geinteresseerd is in events, hij voegt gewoon geen Event nodes toe.
 
 \todo{Ontwerpkeuze: Hulpfuncties zoals shape}
 \todo{Ontwerpkeuze: Toelichten acties}
