--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -1,7 +1,13 @@
 % !TEX spellcheck = nl_NL
-\chapter{Conclusie} \label{hoofdstuk:conclusie}
+\chapter{Conclusie \& Toekomstig werk} \label{hoofdstuk:conclusie}
 Dit project had als doel om een nieuwe omgeving te ontwikkelen die beginnende Haskell-programmeurs, zoals studenten van het vak Functioneel Programmeren, in staat stelt om grafische weergaven te maken en te manipuleren met eenvoudige, zelfgeschreven Haskell-code. Deze omgeving zou bovendien op alle gangbare platformen moeten draaien terwijl de installatie van de omgeving niet onredelijk ingewikkeld moest zijn.
 
-\emph{Canvas.hs}, de ontwikkelde omgeving die in dit verslag gepresenteerd is, is de vervulling van dit doel.
+Canvas.hs, de ontwikkelde omgeving die in dit verslag gepresenteerd is, is de vervulling van dit doel. 
+
+In \autoref{hoofdstuk:requirements} staan de requirements die aan de ontworpen omgeving gesteld werden en de traceability matrix in \autoref{sec:traceability} geeft aan welke requirements door welke tests geverifieerd worden.
 
 \todo{Voltooi Conclusie}
+
+Hieronder worden aspecten besproken die nog missen in Canvas.hs. Ook wordt per feature aangegeven hoe ondersteuning voor die feature toegevoegd kan worden in toekomstige versies.
+
+\input{./Hoofdstukken/evaluatie/aanbevelingen.tex}
